@@ -84,7 +84,7 @@ CFLAGS = -O2 -Wall $(PROFILE) $(OPTIMIZE) $(PPC) -DWINCE
 ### EXECS: executable programs compiled from C++ files.
 #     Note: scidt and eco2epd are obsolete and not compiled by default.
 #
-EXECS= tkscid toga toga134 glaurung fruit_21 gambitfruit viper01 phalanx scorpio greko
+EXECS= tkscid toga toga134 glaurung fruit_21 gambitfruit viper01 phalanx scorpio greko scidlet
 
 ### SCIDOBJS: not all the .o files that make up Scid, just the standard ones 
 #     that most of the programs include.
@@ -177,6 +177,9 @@ scorpio:
 
 greko:
 	cd pocket/greko/src && $(MAKE) -f Makefile
+
+scidlet:
+	cd pocket/scidlet/src && $(MAKE) -f Makefile
 
 tkscid: src/tkscid.o $(OBJS) src/tree.o src/filter.o src/pbook.o src/crosstab.o \
           src/spellchk.o src/probe.o src/optable.o src/engine.o src/recog.o
